[package]
edition = "2021"
name = "mineskin-hash-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

lodepng = { version = "3.7.0", default-features = false }
flate2 = { package = "flate2", version = "1.0.24", features = ["zlib"], default-features = false }
rgb = "0.8.34"
sha2 = "0.10.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
